session auth progress

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-redux": "^5.1.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.0.5",
+		"react-star-ratings": "^2.3.0",
 		"redux": "^4.0.1",
 		"redux-promise-middleware": "^5.1.1"
 	},
