--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "^16.6.0",
 		"react-redux": "^5.1.0",
 		"react-router-dom": "^4.3.1",
+		"react-s3-uploader": "^4.8.0",
 		"react-scripts": "2.0.5",
 		"react-star-ratings": "^2.3.0",
 		"redux": "^4.0.1",
