--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
+		"concurrently": "^4.0.1",
 		"cors": "^2.8.4",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.4",
@@ -26,6 +27,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"both": "concurrently \"react-scripts start\" \"nodemon server/index.js --watch server\"",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
