--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"aws-sdk": "^2.353.0",
 		"axios": "^0.18.0",
+		"bluebird": "^3.5.3",
 		"body-parser": "^1.18.3",
 		"concurrently": "^4.0.1",
 		"cors": "^2.8.4",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.4",
 		"express-session": "^1.15.6",
+		"file-type": "^10.4.0",
+		"fs": "0.0.1-security",
 		"massiv": "0.0.20",
 		"massive": "^5.5.1",
+		"multiparty": "^4.2.1",
 		"passport": "^0.4.0",
 		"passport-auth0": "^1.1.0",
 		"react": "^16.6.0",
