--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"fs": "0.0.1-security",
 		"massiv": "0.0.20",
 		"massive": "^5.5.1",
+		"moment-timezone": "^0.5.23",
 		"multiparty": "^4.2.1",
 		"passport": "^0.4.0",
 		"passport-auth0": "^1.1.0",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
+		"react-moment": "^0.8.3",
 		"react-redux": "^5.1.0",
 		"react-router-dom": "^4.3.1",
 		"react-s3-uploader": "^4.8.0",
